@@ -92,21 +92,30 @@
                 <version>0.0.8</version>
                 <executions>
                     <execution>
-                        <!-- Default configuration for running with: mvn clean javafx:run -->
-                        <id>default-cli</id>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
                         <configuration>
-                            <mainClass>com.system.Main</mainClass>
-                            <finalName>ProjectFX</finalName>
-                            <targetPlatform>win,linux,mac</targetPlatform>
-                            <launcher>app</launcher>
-                            <jlinkZipName>app</jlinkZipName>
-                            <jlinkImageName>app</jlinkImageName>
-                            <noManPages>true</noManPages>
-                            <stripDebug>true</stripDebug>
-                            <noHeaderFiles>true</noHeaderFiles>
+                            <mainClass>com.system.JavaFX.view.ProjectApplication</mainClass> <!-- 你的主类路径 -->
+                            <options>
+                                <option>--add-modules</option>
+                                <option>javafx.controls,javafx.fxml</option> <!-- 确保加载需要的JavaFX模块 -->
+                            </options>
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.0</version> <!-- 可以根据需要选择合适的版本 -->
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Main-Class>com.system.JavaFX.view.ProjectApplication</Main-Class> <!-- 替换为你的主类路径 -->
+                        </manifestEntries>
+                    </archive>
+                </configuration>
             </plugin>
         </plugins>
     </build>
